--- a/public/global.css
+++ b/public/global.css
@@ -46,15 +46,21 @@ input:disabled {
 }
 
 button {
-	background-color: #202225;
+	background-color: #fcfcfc;
     width: 100%;
     height: 40px;
     border: none;
     text-align: center;
+	margin: 10px;
+	border-radius: 6px;
+	border: #fcfcfc 2px solid;
+	color: #fcfcfc;
+	background-color: transparent;
+	cursor: pointer;
 }
 
 button:hover {
-    background-color: #2a2d33;
+    background-color: #bdbdbd;
 }
 
 button:disabled {
@@ -74,9 +80,11 @@ button:focus {
 }
 
 .icon {
-    max-width: 20px;
-    max-height: 20px;
+    max-width: 40px;
+    max-height: 40px;
     margin: auto;
+	stroke: #333;
+	fill: #333;
 }
 
 .text {
